--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </section>
         <section id="quote"></section>
         <section id="project">
-          <div></div>
+          <div class="smallbox"><img src="./resources/images/2017-09-18 (1).png"></div>
+          <div class="smallbox"></div>
+          <div class="smallbox"></div>
         </section>
         <section id="skill"></section>
         <section id="aboutme"></section>
