--- a/index.html
+++ b/index.html
@@ -32,11 +32,33 @@
                 <p class="linebox pf">Currently working on <mark>Portfolio</mark></p>
             </div>
         </section>
-        <section id="quote"></section>
+        <section id="quote">
+          
+          <div class="quot">
+            <img src="./resources/images/quote.svg" >
+            <p>With great power comes great electricity</p>
+          </div>
+        </section>
         <section id="project">
-          <div class="smallbox"><img src="./resources/images/2017-09-18 (1).png"></div>
-          <div class="smallbox"></div>
-          <div class="smallbox"></div>
+          <div class="smallbox lineround">
+            <img src="./resources/images/2017-09-18 (1).png">
+            <p class="topbottom">Festac Road Race</p>
+            <h3>Festac Road Race</h3>
+            <div class="spacing"><aside>View <~></aside></div>
+          </div>
+          <div class="smallbox lineround">
+            <img src="./resources/images/2017-09-18 (1).png">
+            <p class="topbottom">Festac Road Race</p>
+            <h3>Festac Road Race</h3>
+            <div class="spacing"><aside>View <~></aside></div>
+          </div>
+          <div class="smallbox lineround">
+            <img src="./resources/images/2017-09-18 (1).png">
+            <p class="topbottom">Festac Road Race</p>
+            <h3>Festac Road Race</h3>
+            <div class="spacing"><aside>View <~></aside></div>
+          </div>
+          
         </section>
         <section id="skill"></section>
         <section id="aboutme"></section>
