Through with project. starting skill section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
           </div>
           
         </section>
-        <section id="skill"></section>
+        <section id="skill">
+          <div class="subtitle">
+            <h2><mark>#</mark> skills</h2><mark class="line">&nbsp;&nbsp;&nbsp;</mark>
+          </div>
+          
+        </section>
         <section id="aboutme"></section>
         <section id="contact"></section>
     </main>
