Add and remove some images and update some changes

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             </div>
 
             <div class="smallbox lineround">
-              <img src="./resources/images/2017-09-18 (1).png">
-              <p class="topbottom"> WordPress: Visual Composer</p>
-              <h3>Festac Road Race</h3>
-              <p class="desc">Racing Site</p>
+              <img src="./resources/images/investment3.png">
+              <p class="topbottom"> HTML5, CSS, Javascript</p>
+              <h3>Infinte Rise</h3>
+              <p class="desc">Company Site</p>
               <div id='view3' class="view"><aside>View <~></aside></div>
             </div>
           </div>
@@ -93,7 +93,7 @@
           </div>
           <div id="vimage3" class="posDisplay">
             <span class="close">&times;</span>
-            <img src="./resources/images/Web capture_13-11-2023_131151_galleryofcode.com.jpeg" id="img03" class="modal-content" alt="Gallery of Code">
+            <img src="./resources/images/investment3 (3).png" id="img03" class="modal-content" alt="Gallery of Code">
             <div id="caption3"></div>
           </div>
         </section>
