--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <p class="me">
                 Hi, i’m Ikenna! <br /><br />
     
-                I’m a self-taught front-end developer based in Lagos, Nigeria. I can develop responsive websites from scratch and raise them into modern user-friendly web experiences. <br/><br/>
+                I’m a self-taught front-end developer based in Lagos, Nigeria. I develop responsive websites from scratch and raise them into modern user-friendly web experiences. <br/><br/>
                 
                 Transforming my creativity and knowledge into a websites has been my passion for over a year. I have been helping various clients to establish their presence online. I always strive to learn about the newest technologies and frameworks.
               </p>
