Addee links and images edited

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
               <p class="topbottom">Figma => WordPress:Elementor</p>
               <h3>Gallery of Code</h3>
               <p class="desc">Information Technology Company Site</p>
-              <div  class="view"><aside id='view1'>View <~></aside></div>
+              <div  class="view">
+                <aside id='view1'>View <~></aside>
+                <aside><a href="https://galleryofcode.com/" target="_blank">View site</a></aside>
+              </div>
             </div>
   
             <div class="smallbox lineround">
@@ -67,7 +70,10 @@
               <p class="topbottom">WordPress:Elementor</p>
               <h3>RealMax Ville</h3>
               <p class="desc">An Architecture and Construction Site</p>
-              <div id='view2' class="view"><aside>View <~></aside></div>
+              <div  class="view">
+                <aside id='view2'>View <~></aside>
+                <aside><a href="https://realmaxville.com/" target="_blank">View site</a></aside>
+              </div>
             </div>
 
             <div class="smallbox lineround">
@@ -75,7 +81,10 @@
               <p class="topbottom"> HTML5, CSS, Javascript</p>
               <h3>Infinte Rise</h3>
               <p class="desc">Company Site</p>
-              <div id='view3' class="view"><aside>View <~></aside></div>
+              <div  class="view">
+                <aside id='view3'>View Images</aside>
+                <aside><a href="https://anantiikenna.github.io/InfiniteRise/" target="_blank">View site</a></aside>
+              </div>
             </div>
           </div>
         </section>
@@ -109,10 +118,11 @@
               <img src="./resources/images/javascript-logo-png-transparent.png" class="smallicon">
               <img src="./resources/images/nodejs-icon-logo-png-transparent.png" class="smallicon">
               <img src="./resources/images/React_logo_logotype_emblem-700x626.png" class="smallicon">
+              <img src="./resources/images/GitHub_logo.png" class="smallicon">
               <img src="./resources/images/wordpress-blue-logo-png-transparent.png" class="smallicon">
               <img src="./resources/images/adobe-photoshop-cs3-logo-png-transparent.png" class="smallicon">    
               <img src="./resources/images/figma-1-logo-png-transparent.png" class="smallicon">
-              <img src="./resources/images/GitHub_logo.png" class="smallicon">
+              
             </div>
             <div id="descript">
               <div class="smalldescript">
