Edited View project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <h3>Gallery of Code</h3>
               <p class="desc">Information Technology Company Site</p>
               <div  class="view">
-                <aside id='view1'>View <~></aside>
+                <aside id='view1'>View Image</aside>
                 <aside><a href="https://galleryofcode.com/" target="_blank">View site</a></aside>
               </div>
             </div>
@@ -71,18 +71,18 @@
               <h3>RealMax Ville</h3>
               <p class="desc">An Architecture and Construction Site</p>
               <div  class="view">
-                <aside id='view2'>View <~></aside>
+                <aside id='view2'>View Image</aside>
                 <aside><a href="https://realmaxville.com/" target="_blank">View site</a></aside>
               </div>
             </div>
 
             <div class="smallbox lineround">
               <img src="./resources/images/investment3.png">
-              <p class="topbottom"> HTML5, CSS, Javascript</p>
+              <p class="topbottom">Figma => HTML5, CSS, Javascript</p>
               <h3>Infinte Rise</h3>
               <p class="desc">Company Site</p>
               <div  class="view">
-                <aside id='view3'>View Images</aside>
+                <aside id='view3'>View Image</aside>
                 <aside><a href="https://anantiikenna.github.io/InfiniteRise/" target="_blank">View site</a></aside>
               </div>
             </div>
