--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
       <title></title>
+      <link rel="apple-touch-icon" sizes="180x180" href="./resources/images/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="./resources/images/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="./resources/images/favicon-16x16.png">
       <link rel="stylesheet" href="./resources/css/reset.css" type="css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
