Changed the quote and author in the HTML code. (generated by blackbox.ai )

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <section id="quote">
           <div class="quot">
             <img src="./resources/images/quote.svg"  class="img">
-            <p>With great power comes great electricity</p>
+            <p>With great talent comes great responsibility</p>
           </div>
           <div class="quot2">
-            <p>-- Dr Who --</p>
+            <p>--Dev. Ikenna --</p>
             <img src="./resources/images/quote.svg"  class="img2">
           </div>
         </section>
