Added new project box for Nike Shoes site; updated HTML, CSS, and JS to include new modal and image; updated arrays to include new elements.
This commit adds a new project box for the Nike Shoes site, which includes an image and a link to the site. The HTML, CSS, and JS files have been updated to include the new modal and image, as well as updated arrays to include the new elements. The new project box is hidden by default and can be displayed when the corresponding link is clicked. The close button on the new modal also works as expected.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
                 <aside><a href="https://galleryofcode.com/" target="_blank">View site</a></aside>
               </div>
             </div>
+
+            <div class="smallbox lineround">
+              <img src="./resources/images/nike-tailwindcss-vite.netlify.app-short.jpeg">
+              <p class="topbottom">React: Vite, Tailwind CSS</p>
+              <h3>Nike Shoes</h3>
+              <p class="desc">Nike Shoes Advert</p>
+              <div  class="view">
+                <aside id='view4'>View Image</aside>
+                <aside><a href="https://nike-tailwindcss-vite.netlify.app/" target="_blank">View site</a></aside>
+              </div>
+            </div>
   
             <div class="smallbox lineround">
               <img src="./resources/images/Web capture_13-11-2023_13652_realmaxville.com.jpg">
@@ -97,6 +108,11 @@
             <span class="close">&times;</span>
             <img src="./resources/images/Web capture_13-11-2023_131151_galleryofcode.com.jpeg" id="img01" class="modal-content" alt="Gallery of Code">
             <div id="caption1"></div>
+          </div>
+          <div id="vimage4" class="posDisplay">
+            <span class="close">&times;</span>
+            <img src="./resources/images/nike-tailwindcss-vite.netlify.app-full.jpeg" id="img04" class="modal-content" alt="Nike Shoes">
+            <div id="caption4"></div>
           </div>
           <div id="vimage2" class="posDisplay">
             <span class="close">&times;</span>
