--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     
                 I’m a self-taught front-end developer based in Lagos, Nigeria. I develop responsive websites from scratch and raise them into modern user-friendly web experiences. <br/><br/>
                 
-                Transforming my creativity and knowledge into a websites has been my passion for over a year. I have been helping various clients to establish their presence online. I always strive to learn about the newest technologies and frameworks.
+                Transforming my creativity and knowledge into a websites has been my passion for years. I have been helping various clients to establish their presence online. I always strive to learn about the newest technologies and frameworks.
               </p>
               <aside class="linebox"><a href="#contact">Read more -></a></aside>
             </div>
