Added new Div for the new image at project section in html, added #vimage5 in css for both the new image added and javascript been modify , and made changes to the project content  to display in grid and flex in css

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
           </div>
           <div class="bigbox">
             <div class="smallbox lineround">
+              <img src="./resources/images/socioMax.jpeg">
+              <p class="topbottom">React: Vite, TypeScript, Appwrite, Tailwind CSS, Shad UI, TanStack</p>
+              <h3>Socio Max</h3>
+              <p class="desc">Social App</p>
+              <div  class="view">
+                <aside id='view5'>View Image</aside>
+                <aside><a href="https://sociomax.netlify.app/" target="_blank">View site</a></aside>
+              </div>
+            </div>
+
+            <div class="smallbox lineround">
               <img src="./resources/images/galleryofcode.com.png">
               <p class="topbottom">Figma => WordPress:Elementor</p>
               <h3>Gallery of Code</h3>
@@ -109,20 +120,29 @@
             <img src="./resources/images/Web capture_13-11-2023_131151_galleryofcode.com.jpeg" id="img01" class="modal-content" alt="Gallery of Code">
             <div id="caption1"></div>
           </div>
-          <div id="vimage4" class="posDisplay">
-            <span class="close">&times;</span>
-            <img src="./resources/images/nike-tailwindcss-vite.netlify.app-full.jpeg" id="img04" class="modal-content" alt="Nike Shoes">
-            <div id="caption4"></div>
-          </div>
+          
           <div id="vimage2" class="posDisplay">
             <span class="close">&times;</span>
             <img src="./resources/images/Web capture_13-11-2023_13652_realmaxville.com.jpeg" id="img02" class="modal-content" alt="Gallery of Code">
             <div id="caption2"></div>
           </div>
+
           <div id="vimage3" class="posDisplay">
             <span class="close">&times;</span>
             <img src="./resources/images/investment3 (3).png" id="img03" class="modal-content" alt="Gallery of Code">
             <div id="caption3"></div>
+          </div>
+
+          <div id="vimage4" class="posDisplay">
+            <span class="close">&times;</span>
+            <img src="./resources/images/nike-tailwindcss-vite.netlify.app-full.jpeg" id="img04" class="modal-content" alt="Nike Shoes">
+            <div id="caption4"></div>
+          </div>
+
+          <div id="vimage5" class="posDisplay">
+            <span class="close">&times;</span>
+            <img src="./resources/images/socioMax1.png" id="img04" class="modal-content" alt="Nike Shoes">
+            <div id="caption4"></div>
           </div>
         </section>
 
@@ -135,6 +155,7 @@
               <img src="./resources/images/html-5-logo-png-transparent.png" class="smallicon">
               <img src="./resources/images/css-3-logo-png-transparent.png" class="smallicon">
               <img src="./resources/images/javascript-logo-png-transparent.png" class="smallicon">
+              <img src="./resources/images/typescript.png" class="smallicon">
               <img src="./resources/images/nodejs-icon-logo-png-transparent.png" class="smallicon">
               <img src="./resources/images/React_logo_logotype_emblem-700x626.png" class="smallicon">
               <img src="./resources/images/GitHub_logo.png" class="smallicon">
@@ -164,6 +185,7 @@
           <div class="subtitle">
             <h2><mark>#</mark>about me</h2><mark class="line">&nbsp;&nbsp;&nbsp;</mark>
           </div>
+          
           <div class="bigbox">
             <div class="smalldescript">
               <p class="me">
