"Updated languages list in index.html, added 'TypeScript'"

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div id="descript">
               <div class="smalldescript">
                 <h4 class="linebox">Languages</h4>
-                <p class="linebox">HTML5 CSS Javascript EJS Node-Js Express.js React SQL</p>
+                <p class="linebox">HTML5 CSS Javascript TypeScript EJS Node-Js Express.js React SQL</p>
               </div>
               <div class="smalldescript">
                 <h4 class="linebox">Tools</h4>
