`Added new project "BetZillion" and updated modal images and captions`

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
           </div>
           <div class="bigbox">
             <div class="smallbox lineround">
+              <img src="./resources/images/betzillion.jpg">
+              <p class="topbottom">React: NEXT, TypeScript, Tailwind CSS, Shad UI</p>
+              <h3>BetZillion</h3>
+              <p class="desc">Sport Bet App</p>
+              <div  class="view">
+                <aside id='view6'>View Image</aside>
+                <aside><a href="https://betzillion.netlify.app/" target="_blank">View site</a></aside>
+              </div>
+            </div>
+
+            <div class="smallbox lineround">
               <img src="./resources/images/socioMax.jpeg">
               <p class="topbottom">React: Vite, TypeScript, Appwrite, Tailwind CSS, Shad UI, TanStack</p>
               <h3>Socio Max</h3>
@@ -123,13 +134,13 @@
           
           <div id="vimage2" class="posDisplay">
             <span class="close">&times;</span>
-            <img src="./resources/images/Web capture_13-11-2023_13652_realmaxville.com.jpeg" id="img02" class="modal-content" alt="Gallery of Code">
+            <img src="./resources/images/Web capture_13-11-2023_13652_realmaxville.com.jpeg" id="img02" class="modal-content" alt="RealMax Ville">
             <div id="caption2"></div>
           </div>
 
           <div id="vimage3" class="posDisplay">
             <span class="close">&times;</span>
-            <img src="./resources/images/investment3 (3).png" id="img03" class="modal-content" alt="Gallery of Code">
+            <img src="./resources/images/investment3 (3).png" id="img03" class="modal-content" alt="InfiniteRise">
             <div id="caption3"></div>
           </div>
 
@@ -141,8 +152,14 @@
 
           <div id="vimage5" class="posDisplay">
             <span class="close">&times;</span>
-            <img src="./resources/images/socioMax1.png" id="img04" class="modal-content" alt="Nike Shoes">
-            <div id="caption4"></div>
+            <img src="./resources/images/socioMax1.png" id="img05" class="modal-content" alt="Socio Max">
+            <div id="caption5"></div>
+          </div>
+
+          <div id="vimage6" class="posDisplay">
+            <span class="close">&times;</span>
+            <img src="./resources/images/betzillion_fullpage.jpeg" id="img06" class="modal-content" alt="BetZillion">
+            <div id="caption6"></div>
           </div>
         </section>
 
